--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+bleach==5.0.1
+build==0.10.0
 cachetools==5.2.0
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
+commonmark==0.9.1
+cryptography==39.0.0
+docutils==0.19
 google-api-core==2.10.1
 google-api-python-client==2.63.0
 google-auth==2.12.0
@@ -8,16 +14,35 @@ google-auth-httplib2==0.1.0
 googleapis-common-protos==1.56.4
 httplib2==0.20.4
 idna==3.4
+importlib-metadata==6.0.0
+jaraco.classes==3.2.3
+jeepney==0.8.0
+keyring==23.13.1
+more-itertools==9.0.0
 numpy==1.23.3
+packaging==23.0
 pandas==1.5.0
+pkginfo==1.9.6
 protobuf==4.21.7
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
+Pygments==2.14.0
 pyparsing==3.0.9
+pyproject_hooks==1.0.0
 python-dateutil==2.8.2
 pytz==2022.2.1
+readme-renderer==37.3
 requests==2.28.1
+requests-toolbelt==0.10.1
+rfc3986==2.0.0
+rich==13.1.0
 rsa==4.9
+SecretStorage==3.3.3
 six==1.16.0
+tomli==2.0.1
+twine==4.0.2
 uritemplate==4.1.1
 urllib3==1.26.12
+webencodings==0.5.1
+zipp==3.11.0
